Update resume :memo:

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <p>I am currently a second-year Master's student in Mechanical Engineering (Mechatronics track) at <a href="https://www.stanford.edu/">Stanford University</a>.
                                 My work is centered around computer vision (low-level and deep learning), mechatronics and control and I am extremely interested in autonomous driving.
                                 Prior to joining Stanford, I graduated from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a> with highest honor.
-                                <b><font color="#cb8c1e">My resume can be downloaded</font> <a href="./pdf/resume.pdf">[here]</a>.</b>
+                                <b><font color="#cb8c1e">My resume can be downloaded</font> <a href="./pdf/ChiZhang_Resume.pdf">[here]</a>.</b>
                             </p>
                             <hr>
                         </div>
